--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "nodemon": "^3.0.1",
     "pm2": "^5.3.0",
     "sqlite3": "^5.1.6",
-    "xlsx": "^0.18.5"
+    "xlsx": "file:vendor/xlsx-0.20.0.tgz"
   }
 }
