--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start express-app.js"
+    "start": "nodemon express-app.js"
   },
   "keywords": [],
   "author": "",
@@ -23,9 +23,6 @@
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
     "nodemon": "^3.0.1",
-    "pm2": "^5.3.0",
-    "semver": "^7.5.4",
-    "sqlite3": "^5.1.6",
-    "xlsx": "file:vendor/xlsx-0.20.0.tgz"
+    "sqlite3": "^5.1.6"
   }
 }
