--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "express-app.js",
   "build": "pkg express-app.js -o express-app",
-  "type":"module",
+  "type": "module",
   "bin": {
     "express-app": "express-app.js"
   },
@@ -20,9 +20,11 @@
     "better-sqlite3": "^8.3.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
     "nodemon": "^3.0.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "xlsx": "file:vendor/xlsx-0.20.0.tgz"
   }
 }
