--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "express",
+  "name": "sanCode_API",
   "version": "1.0.0",
-  "description": "",
+  "author": "https://briomar.co.ke",
+  "description": "The API That Makes Managing Student Health Records Easy",
   "main": "express-app.js",
-  "build": "pkg express-app.js -o express-app",
+  "build": "pkg express-app.js -o sanCode-API",
   "type": "module",
   "bin": {
     "express-app": "express-app.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon express-app.js"
+    "test": "nodemon express-app.js",
+    "start": "pm2 start express-app.js"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
@@ -24,8 +24,10 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
-    "nodemon": "^3.0.1",
-    "sqlite3": "^5.1.6",
-    "xlsx": "file:vendor/xlsx-0.20.0.tgz"
+    "pm2": "^5.3.0",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
