--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
     "pm2": "^5.3.0",
+    "path": "^0.12.7",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "nodemon": "^3.0.1"
   }
 }
