--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
-    "pm2": "^5.3.0",
-    "path": "^0.12.7",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "pkg": "^5.8.1",
+    "pm2": "^5.3.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
