--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
+    "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pm2": "^5.3.0",
