--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "all": "^0.0.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
