--- a/package.json
+++ b/package.json
@@ -10,27 +10,37 @@
     "express-app": "express-app.js"
   },
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --testTimeout=5000",
+    "test": "jest --testTimeout=5000",
     "dev": "nodemon express-app.js",
     "start": "pm2 start express-app.js"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   },
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.23.5",
     "all": "^0.0.0",
     "axios": "^1.4.0",
+    "babel-jest": "^29.7.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pm2": "^5.3.0",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
