--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-env": "^7.23.5",
+    "@supabase/supabase-js": "^2.44.2",
     "all": "^0.0.0",
     "axios": "^1.4.0",
     "babel-jest": "^29.7.0",
