--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "The API That Makes Managing Student Health Records Easy",
   "main": "express-app.js",
   "build": "pkg express-app.js -o sanCode-API",
-  "type": "module",
+  "type": "commonjs",
   "bin": {
     "express-app": "express-app.js"
   },
@@ -41,7 +41,6 @@
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pm2": "^5.4.2",
-    "sqlite3": "^5.1.6",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
